# QuantMill

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEARNING_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  build_pdf.sh  index.html  main.py  mkdocs.yml  pyproject.toml  quant.py  quantmill.command  requirements.txt  sitemap.xml  watchlist.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
ARCHITECTURE/: index.html
CLI/: index.html
DATAPROVIDER/: index.html
PRODUCT_DESIGN/: index.html
RESEARCH_NOTES/: index.html
ROADMAP/: index.html
STATUS/: index.html
ai-quant-landscape/: index.html
docs/: ARCHITECTURE.md  CLI.md  DATAPROVIDER.md  PRODUCT_DESIGN.md  RESEARCH_NOTES.md  ROADMAP.md  STATUS.md  ai-quant-landscape.md  index.md
examples/experiments/: cn_composite.yaml  cn_ml_baseline.yaml  sample_demo.yaml
quantmill/: __init__.py  config.py  watchlist.py
quantmill/backtest/: __init__.py
quantmill/credibility/: __init__.py  stats.py  validate.py
quantmill/cross/: __init__.py  backtest.py  composite.py  ic.py  model.py  neutralize.py  panel.py  riskmodel.py  run.py  universe.py
quantmill/data/: __init__.py  _util.py  live.py  provider.py  sharadar.py  sources.py
quantmill/evaluation/: __init__.py  metrics.py
quantmill/execution/: __init__.py  broker.py  engine.py
quantmill/factor/: __init__.py  analysis.py  expr.py  library.py
quantmill/llm/: __init__.py  llm_client.py  news.py  provider.py  sentiment.py  textfactor.py
quantmill/model/: __init__.py  models.py  provider.py
quantmill/niche/: __init__.py  cb_ipo.py  etf_arb.py
quantmill/paper/: __init__.py  forward.py  schedule.py
quantmill/portfolio/: __init__.py  backtest.py  optimizer.py  report.py  risk.py  rules.py
quantmill/report/: __init__.py  dashboard.py  home.py
quantmill/risk/: __init__.py  overlay.py
quantmill/web/: __init__.py  app.py  cross_view.py  forward_view.py  market.py  research.py  state.py  trading.py  util.py
search/: search_index.json
strategies/: 01_first_backtest.py  02_plain_loop.py  03_plot_ma.py  04_lookahead_cheat.py  05_risk_management.py  06_momentum_vs_meanreversion.py
tests/: conftest.py  test_backtest.py  test_credibility.py  test_cross.py  test_data.py  test_e2e.py  test_execution.py  test_experiment.py  test_factor.py  test_features.py  test_forward.py  test_live.py  test_llm.py  test_llm_client.py  test_metrics.py  test_model.py  test_model_provider.py  test_niche.py  test_perf_metrics.py  test_pit.py  test_portfolio.py  test_provider.py  test_risk.py  test_riskmodel.py  test_schedule.py  test_sharadar.py  test_textfactor.py  test_watchlist.py  test_web.py
(+8 files in other folders)
